# deckmint

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md
deckmint/: Cargo.toml
deckmint-math/: Cargo.toml  README.md
deckmint-math/src/: lib.rs  postprocess.rs
deckmint-math/src/mathml_to_omml/: elements.rs  mod.rs  op_dict.rs
deckmint-wasm/: Cargo.toml  README.md
deckmint-wasm/demo/: index.html
deckmint-wasm/src/: lib.rs
deckmint/examples/: 01_hello_world.rs  02_shapes.rs  03_rich_text.rs  04_tables.rs  05_charts.rs  06_images.rs  07_animations.rs  08_backgrounds.rs  09_grid_layout.rs  10_sections_notes.rs  11_equations.rs  12_new_features.rs  13_master_slides.rs  14_grid_advanced.rs  15_connectors.rs  16_pattern_fills.rs  17_gradients.rs  18_transitions.rs  19_custom_geometry.rs  20_table_merging.rs  21_shapes_showcase.rs  22_theme_colors.rs  23_emphasis_animations.rs  24_charts_advanced.rs  25_text_effects.rs  26_shadows_3d.rs  27_hyperlinks.rs  28_infographic.rs  29_animation_sequences.rs  30_pitch_deck.rs  31_report.rs  32_educational.rs  33_dashboard.rs  34_creative_portfolio.rs  features.rs  sample.rs
deckmint/src/: enums.rs  error.rs  layout.rs  lib.rs  packaging.rs  presentation.rs  slide.rs  types.rs  utils.rs  validate.rs
deckmint/src/objects/: chart.rs  connector.rs  group.rs  image.rs  media.rs  mod.rs  shape.rs  table.rs  text.rs
deckmint/src/xml/: chart_xml.rs  mod.rs  pres_xml.rs  rels_xml.rs  slide_xml.rs  table_xml.rs
deckmint/tests/: integration.rs
scripts/: check_pptx.py  validate.sh
