[package]
name = "deckmint-wasm"
version = "0.1.3"
edition = "2021"
description = "WASM bindings for deckmint"
license = "MIT"
repository = "https://github.com/rebo/deckmint"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deckmint = { version = "0.1.3", path = "../deckmint" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
